--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -2,861 +2,18 @@ body {
   font: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-html, body, .page-content{
-  height: 100%;
-   direction: rtl;
-   background-color: #d5d7da !important;
-}
-
-.container{
-  width: 90%;
-}
-
-.section h2{
-  padding-right: 6%;
-  color: #8a8d90;
-  font-family: 'Secular One', Arial, sans-serif !important;
-}
-
-.form-group{
-    margin-top: 15px;
-}
-
-td:focus, tr:focus, th:focus {
-    outline: none !important;
-}
-
-.col-md-4 a{
-  color: #44B6AE !important;
-  text-decoration: none;
-}
-
-.section a {
-  font-size: 25px;
-  text-decoration: none;
-  color: #8a8d90;
-}
-
-.noPadding {
-  padding: 0 !important;
-}
-
-.md-button.md-fab:not([disabled]) {
-    background-color: #44B6AE !important;
-    color: white;
-}
-
-.md-button.md-default-theme.md-fab:not([disabled]):hover, .md-button.md-fab:not([disabled]):hover {
-    background-color: #67b9b3 !important;
-}
-
-.dots{
-  white-space: nowrap;
-  overflow:hidden !important;
-  text-overflow: ellipsis;
-  max-width: 100px;
-  text-align: right;
-}
-
-.md-button.md-fab.md-fab-bottom-right {
-    left: 20px !important;
-    right: auto !important;
-    margin-bottom: 5%;
-    margin-left: 2%;
-}
-
-.collapse:hover{
-  display: none;
-}
-
-.collapse td{
-  text-align: right;
-}
-
-.section a:hover {
-  color: #8a8d90;
-}
-
-.col-md-4 a:hover {
-  color: #44B6AE !important;
-  text-decoration: none;
-}
-
-.page-header .page-header-top .top-menu {
-  float: right !important;
-}
-
-.page-header {
-  height: 0 !important;
-}
-
-.page-header .page-header-menu {
-  height: 74px !important;
-}
-
-.page-title{
-  width: 100%;
-}
-
-.page-container{
-  height: 85%;
-}
-
-.form-control{
-  width: 30%;
-}
-
-.login .caption-subject{
-  color: #8a8d90;
-}
-
-.login{
-  font-size: 25px;
-  width:50%; 
-  margin:0 auto;
-}
-
-.login input[type="text"], .login input[type="password"]{
-  width: 70%;
-   display: block;
-  margin : 0 auto;
-}
-
-.login input[type="submit"]{
-    float: left;
-    margin-left: 15%;
-    margin-top: 3%;
-}
-
-.form-group{
-  margin-top: 3% !important;
-}
-
-.login i{
-  margin-right: 16% !important;
-}
-
-.page-title .navbar-nav{
-  width: 100%;
-}
-
-.page-title .navbar-nav li{
-  width:15%;
-  text-align: center;
-  font-size: 17px;
-  
-}
-
-.page-title .navbar-nav li a{
-  color: #8a8d90;
-  font-weight: 600;
-}
-
-.nav>li>a:focus, .nav>li>a:hover{
-  background-color: transparent;
-}
-
-.page-header-menu{
-  background-color: #44B6AE !important;
-}
-
-.portlet-body .icon{
-  font-size: 80px;
-  text-align: center;
-}
-
-.page-logo img{
-    height: 65%;
-}
-
-.page-header .page-header-top .top-menu .navbar-nav>li.dropdown-user>.dropdown-menu {
-    width: 170px !important;
-}
-
-.nav.pull-right>li>.dropdown-menu, .nav>li>.dropdown-menu.pull-right {
-    left: auto !important;
-    right: 0 !important;
-}
-
-.page-header .page-header-top .top-menu .navbar-nav>li.dropdown>.dropdown-menu:after {
-    left: 140px !important;
-}
-
-.page-header .page-header-top .top-menu .navbar-nav>li.dropdown>.dropdown-menu:before {
-    left: 140px !important;
-}
-
-.grid{
-  margin-top: 5%;
-}
-
-.page-header .page-header-top .top-menu .navbar-nav>li.dropdown.open .dropdown-toggle, .page-header .page-header-top .top-menu .navbar-nav>li.dropdown>.dropdown-toggle:active, .page-header .page-header-top .top-menu .navbar-nav>li.dropdown>.dropdown-toggle:focus, .page-header .page-header-top .top-menu .navbar-nav>li.dropdown>.dropdown-toggle:hover{
-    background-color: transparent !important;
-}
-
-.portlet{
-  border-radius: 10px !important;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.shadow{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.grid .portlet{
-  height: 250px;
-}
-
-.caption.caption-md{
-    text-align: center;
-    font-size: 40px;
-}
-
-.description{
-  color: #8a8d90;
-  font-size: 20px;
-  text-align: center;
-}
-.custom_footer{
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.btn-theme-panel .btn>i{
-    color: white !important;
-    font-weight: bold;
-}
-
-.btn-theme-panel{
-    float: left;
-}
-
-.btn-theme-panel a{
-    opacity: 1 !important;
-}
-
-.page-head .page-title{
-  padding: 0 !important;
-}
-
-.dropdown-user a{
-  color: white;
-  font-weight: 600;
-}
-
-.dropdown-user a:hover{
-  color: white;
-}
-
-.dropdown-user .icon{
-  display: inline-block; 
-}
-
-.dropdown-user{
-  font-size: 25px;
-}
-
-.page-header .page-header-top .page-logo {
-    position: absolute;
-    float: none !important;
+html, body{
     height: 100%;
-    width: 100% !important;
-    text-align: center;
+    background-color: #d5d7da !important;
 }
 
-.page-header .page-header-top .page-logo .logo-default {
-    margin: 0 !important;
+.logo-image{
+    height: 80%;
+    width: 8%;
+    margin-left: 5%;
+    margin-top: 1%;
 }
 
-th a{
-   text-decoration: none;
-}
-
-th a:focus, th a:hover {
-  text-decoration: none !important;
-}
-
-.control {
-	font-size: 18px;
-	position: relative;
-	display: block;
-	margin-bottom: 15px;
-	padding-left: 30px;
-	cursor: pointer;
-}
-
-.control input {
-	position: absolute;
-	z-index: -1;
-	opacity: 0;
-}
-
-.control__indicator {
-	position: absolute;
-	top: 2px;
-	left: 0;
-	width: 20px;
-	height: 20px;
-	background: #e6e6e6;
-}
-
-.control--radio .control__indicator {
-	border-radius: 50%;
-}
-
-/* Hover and focus states */
-.control:hover input ~ .control__indicator,
-.control input:focus ~ .control__indicator {
-	background: #ccc;
-}
-
-/* Checked state */
-.control input:checked ~ .control__indicator {
-	background: #2aa1c0;
-}
-
-/* Hover state whilst checked */
-.control:hover input:not([disabled]):checked ~ .control__indicator,
-.control input:checked:focus ~ .control__indicator {
-	background: #0e647d;
-}
-
-/* Disabled state */
-.control input:disabled ~ .control__indicator {
-	pointer-events: none;
-	opacity: .6;
-	background: #e6e6e6;
-}
-
-/* Check mark */
-.control__indicator:after {
-	position: absolute;
-	display: none;
-	content: '';
-}
-
-/* Show check mark */
-.control input:checked ~ .control__indicator:after {
-	display: block;
-}
-
-/* Checkbox tick */
-.control--checkbox .control__indicator:after {
-	top: 4px;
-	left: 8px;
-	width: 3px;
-	height: 8px;
-	transform: rotate(45deg);
-	border: solid #fff;
-	border-width: 0 2px 2px 0;
-}
-
-/* Disabled tick colour */
-.control--checkbox input:disabled ~ .control__indicator:after {
-	border-color: #7b7b7b;
-}
-
-table label {
-     margin-bottom: 0; 
-}
-
-md-tabs.md-default-theme .md-tab.md-active, md-tabs .md-tab.md-active, md-tabs.md-default-theme .md-tab.md-active md-icon, md-tabs .md-tab.md-active md-icon, md-tabs.md-default-theme .md-tab.md-focused, md-tabs .md-tab.md-focused, md-tabs.md-default-theme .md-tab.md-focused md-icon, md-tabs .md-tab.md-focused md-icon{
-  background-color: #44B6AE;
-  color: white;
-  font-size: 18px;
-}
-
-md-tabs.md-default-theme .md-tab, md-tabs .md-tab {
-    color: #44B6AE;
-    font-size: 18px;
-}
-
-.md-fab i {
-    font-size: 25px;
-    vertical-align: middle;
-}
-
-md-content.md-default-theme {
-  background-color: #eff3f8;
-}
-
-md-checkbox{
-  margin-bottom: 0 !important;
-}
-
-md-checkbox.md-checked.green-haze .md-icon {
- background-color: #44B6AE;
-}
-
-.checkedBackground{
-  background-color: #f1e5e5;
-}
-
-.table.table-light.table-hover>tbody>tr:hover>td, .table.table-light.table-hover>tbody>tr:hover>th, .table.table-light.table-hover>tbody>tr>td:hover, .table.table-light.table-hover>tbody>tr>th:hover{
-  background-color: #f3f0f0 !important;
-}
-
-td{
-  font-size: 20px !important;
-}
-
-.inbox-body .inbox-small-cells{
-  text-align: center;
-}
- th:not(.md-checkbox){
-   font-size: 20px !important;
-  text-align: center;
- }
-
- .mail-box {
-    border-collapse: collapse;
-    border-spacing: 0;
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-}
-.mail-box aside {
-    display: table-cell;
-    float: none;
-    height: 100%;
-    padding: 0;
-    vertical-align: top;
-}
-.mail-box .sm-side {
-    background: none repeat scroll 0 0 #e5e8ef;
-    border-radius: 4px 0 0 4px;
-    width: 25%;
-}
-.mail-box .lg-side {
-    background: none repeat scroll 0 0 #fff;
-    border-radius: 0 4px 4px 0;
-    width: 75%;
-}
-.mail-box .sm-side .user-head {
-    background: none repeat scroll 0 0 #00a8b3;
-    border-radius: 4px 0 0;
-    color: #fff;
-    min-height: 80px;
-    padding: 10px;
-}
-.user-head .inbox-avatar {
-    float: left;
-    width: 65px;
-}
-.user-head .inbox-avatar img {
-    border-radius: 4px;
-}
-.user-head .user-name {
-    display: inline-block;
-    margin: 0 0 0 10px;
-}
-.user-head .user-name h5 {
-    font-size: 14px;
-    font-weight: 300;
-    margin-bottom: 0;
-    margin-top: 15px;
-}
-.user-head .user-name h5 a {
-    color: #fff;
-}
-.user-head .user-name span a {
-    color: #87e2e7;
-    font-size: 12px;
-}
-a.mail-dropdown {
-    background: none repeat scroll 0 0 #80d3d9;
-    border-radius: 2px;
-    color: #01a7b3;
-    font-size: 10px;
-    margin-top: 20px;
-    padding: 3px 5px;
-}
-.inbox-body {
-    padding: 20px;
-    color: #6a6b6d;
-}
-.btn-compose {
-    background: none repeat scroll 0 0 #ff6c60;
-    color: #fff;
-    padding: 12px 0;
-    text-align: center;
-    width: 100%;
-}
-.btn-compose:hover {
-    background: none repeat scroll 0 0 #f5675c;
-    color: #fff;
-}
-ul.inbox-nav {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-.inbox-divider {
-    border-bottom: 1px solid #d5d8df;
-}
-ul.inbox-nav li {
-    display: inline-block;
-    line-height: 45px;
-    width: 100%;
-}
-ul.inbox-nav li a {
-    color: #6a6a6a;
-    display: inline-block;
-    line-height: 45px;
-    padding: 0 20px;
-    width: 100%;
-}
-ul.inbox-nav li a:hover, ul.inbox-nav li.active a, ul.inbox-nav li a:focus {
-    background: none repeat scroll 0 0 #d5d7de;
-    color: #6a6a6a;
-}
-ul.inbox-nav li a i {
-    color: #6a6a6a;
-    font-size: 16px;
-    padding-right: 10px;
-}
-ul.inbox-nav li a span.label {
-    margin-top: 13px;
-}
-ul.labels-info li h4 {
-    color: #5c5c5e;
-    font-size: 13px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 5px;
-    text-transform: uppercase;
-}
-ul.labels-info li {
-    margin: 0;
-}
-ul.labels-info li a {
-    border-radius: 0;
-    color: #6a6a6a;
-}
-ul.labels-info li a:hover, ul.labels-info li a:focus {
-    background: none repeat scroll 0 0 #d5d7de;
-    color: #6a6a6a;
-}
-ul.labels-info li a i {
-    padding-right: 10px;
-}
-.nav.nav-pills.nav-stacked.labels-info p {
-    color: #9d9f9e;
-    font-size: 11px;
-    margin-bottom: 0;
-    padding: 0 22px;
-}
-.inbox-head {
-    background: none repeat scroll 0 0 #41cac0;
-    border-radius: 0 4px 0 0;
-    color: #fff;
-    min-height: 80px;
-    padding: 20px;
-}
-.inbox-head h3 {
-    display: inline-block;
-    font-weight: 300;
-    margin: 0;
-    padding-top: 6px;
-}
-.inbox-head .sr-input {
-    border: medium none;
-    border-radius: 4px 0 0 4px;
-    box-shadow: none;
-    color: #8a8a8a;
-    float: left;
-    height: 40px;
-    padding: 0 10px;
-}
-.inbox-head .sr-btn {
-    background: none repeat scroll 0 0 #00a6b2;
-    border: medium none;
-    border-radius: 0 4px 4px 0;
-    color: #fff;
-    height: 40px;
-    padding: 0 20px;
-}
-.table-inbox {
-    border: 1px solid #d3d3d3;
-    margin-bottom: 0;
-}
-.table-inbox tr td {
-    padding: 12px !important;
-}
-.unread td:hover {
-    cursor: pointer;
-}
-.table-inbox tr td .fa-star.inbox-started, .table-inbox tr td .fa-star:hover {
-    color: #f78a09;
-}
-.table-inbox tr td .fa-star {
-    color: #d5d5d5;
-}
-.table-inbox tr.unread td {
-    background: none repeat scroll 0 0 #f7f7f7;
-    font-weight: 600;
-}
-ul.inbox-pagination {
-    float: right;
-}
-ul.inbox-pagination li {
-    float: left;
-}
-.mail-option {
-    display: inline-block;
-    margin-bottom: 10px;
-    width: 100%;
-}
-.mail-option .chk-all, .mail-option .btn-group {
-    margin-right: 5px;
-}
-.mail-option .chk-all, .mail-option .btn-group a.btn {
-    background: none repeat scroll 0 0 #fcfcfc;
-    border: 1px solid #e7e7e7;
-    border-radius: 3px !important;
-    color: #afafaf;
-    display: inline-block;
-    padding: 5px 10px;
-}
-.inbox-pagination a.np-btn {
-    background: none repeat scroll 0 0 #fcfcfc;
-    border: 1px solid #e7e7e7;
-    border-radius: 3px !important;
-    color: #afafaf;
-    display: inline-block;
-    padding: 5px 15px;
-}
-.mail-option .chk-all input[type="checkbox"] {
-    margin-top: 0;
-}
-.mail-option .btn-group a.all {
-    border: medium none;
-    padding: 0;
-}
-.inbox-pagination a.np-btn {
-    margin-left: 5px;
-}
-.inbox-pagination li span {
-    display: inline-block;
-    margin-right: 5px;
-    margin-top: 7px;
-}
-.fileinput-button {
-    background: none repeat scroll 0 0 #eeeeee;
-    border: 1px solid #e6e6e6;
-}
-.inbox-body .modal .modal-body input, .inbox-body .modal .modal-body textarea {
-    border: 1px solid #e6e6e6;
-    box-shadow: none;
-}
-.btn-send, .btn-send:hover {
-    background: none repeat scroll 0 0 #00a8b3;
-    color: #fff;
-}
-.btn-send:hover {
-    background: none repeat scroll 0 0 #009da7;
-}
-.modal-header h4.modal-title {
-    font-family: "Open Sans",sans-serif;
-    font-weight: 300;
-}
-.modal-body label {
-    font-family: "Open Sans",sans-serif;
-    font-weight: 400;
-}
-.heading-inbox h4 {
-    border-bottom: 1px solid #ddd;
-    color: #444;
-    font-size: 18px;
-    margin-top: 20px;
-    padding-bottom: 10px;
-}
-.sender-info {
-    margin-bottom: 20px;
-}
-.sender-info img {
-    height: 30px;
-    width: 30px;
-}
-.sender-dropdown {
-    background: none repeat scroll 0 0 #eaeaea;
-    color: #777;
-    font-size: 10px;
-    padding: 0 3px;
-}
-.view-mail a {
-    color: #ff6c60;
-}
-.attachment-mail {
-    margin-top: 30px;
-}
-.attachment-mail ul {
-    display: inline-block;
-    margin-bottom: 30px;
-    width: 100%;
-}
-.attachment-mail ul li {
-    float: left;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    width: 150px;
-}
-.attachment-mail ul li img {
-    width: 100%;
-}
-.attachment-mail ul li span {
-    float: right;
-}
-.attachment-mail .file-name {
-    float: left;
-}
-.attachment-mail .links {
-    display: inline-block;
-    width: 100%;
-}
-
-.fileinput-button {
-    float: left;
-    margin-right: 4px;
-    overflow: hidden;
-    position: relative;
-}
-.fileinput-button input {
-    cursor: pointer;
-    direction: ltr;
-    font-size: 23px;
-    margin: 0;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transform: translate(-300px, 0px) scale(4);
-}
-.fileupload-buttonbar .btn, .fileupload-buttonbar .toggle {
-    margin-bottom: 5px;
-}
-.files .progress {
-    width: 200px;
-}
-.fileupload-processing .fileupload-loading {
-    display: block;
-}
-* html .fileinput-button {
-    line-height: 24px;
-    margin: 1px -3px 0 0;
-}
-* + html .fileinput-button {
-    margin: 1px 0 0;
-    padding: 2px 15px;
-}
-@media (max-width: 767px) {
-.files .btn span {
-    display: none;
-}
-.files .preview * {
-    width: 40px;
-}
-.files .name * {
-    display: inline-block;
-    width: 80px;
-    word-wrap: break-word;
-}
-.files .progress {
-    width: 20px;
-}
-.files .delete {
-    width: 60px;
-}
-}
-ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-}
- 
-.dialogTitle{
-  font-size: 20px !important;
-  color: #8896a0 !important;
-}
-
-md-toolbar{
-  background-color: #44B6AE !important;
-}
-
-.md-datepicker-triangle-button {
-    left: 0 !important;
-    right: auto !important;
-}
-
-.md-datepicker-input-container{
-  width: 55% !important;
-}
-
-.md-datepicker-input-container {
-    border-bottom-color: #44B6AE;
-}
-
-.md-datepicker-calendar-pane{
-  direction: ltr !important;
-}
-
-md-dialog-content{
-  overflow-x: hidden !important;
-}
-
-.customersAmount{
-  margin-left: 1%;
-  color: #44B6AE; 
-  font-weight: bold; 
-  font-size: 20px;
-}
-
-.error-messages{
-  color:red;
-  margin-right: 4%;
-  font-size: 20px;
-}
-
-.errorPage{
-  margin-right: 10%;
-  margin-top: 5%;
-  color: #44B6AE;
-}
-
-.errorPage h1{
-  font-size: 80px;
-}
-
-.errorPage{
-  display: inline-block;
-}
-
-.errorPage p{
-  font-size: 35px;
-}
-
-.errorPage a{
-  margin-top: 5%;
-  margin-right: 25%;
-  font-size: 30px;
-}
-
-img.errorPage{
-    height: 300px;
-    margin-right: 7%;
-    margin-bottom: 12%;
-}
-
-#spinner-light-box{
-  display: none;
-  overflow: hidden;
-  overflow-y: hidden;
-  top: 0%;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 100000;
+.md-toolbar-tools{
+    margin-left: 80%; 
 }
