--- a/myapp/public/views/login.html
+++ b/myapp/public/views/login.html
@@ -11,7 +11,8 @@
             </md-input-container>
             <md-input-container layout-align="center center">
                 <div layout="row" layout-sm="column" layout-margin>
-                    <md-button class="md-raised" flex-sm="100">Login</md-button>
+                    <md-button class="md-raised md-primary" flex-sm="100">Login</md-button>
+                    <md-button class="md-raised md-primary" flex-sm="100">Login By Instagram</md-button>
                 </div>
             </md-input-container>
         </md-content>
